--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -16,4 +16,9 @@
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_notifications" />
 
+    <item
+        android:id="@+id/navigation_bookmarks"
+        android:icon="@drawable/ic_baseline_bookmark_24"
+        android:title="@string/title_bookmarks" />
+
 </menu>
