--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -26,7 +26,7 @@
     <fragment
         android:id="@+id/navigation_bookmarks"
         android:name="com.csi.bottomnavigationactivity.ui.bookmarks.BookmarksFragment"
-        android:label="fragment_bookmarks"
+        android:label="@string/title_bookmarks"
         tools:layout="@layout/fragment_bookmarks" />
 
 </navigation>
