* added deleteAllNotes method * placed 'erase all notes' button inside SettingsFragment.kt, which calls deleteAllNotes in confirmation dialog(if user confirms) * added SettingsViewModel.kt to Koin AppModules.kt

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.settings.SettingsFragment">
+    tools:context=".ui.settings.SettingsFragment"
+    android:background="@color/colorMainBackground">
 
     <TextView
         android:id="@+id/text_setting"
@@ -19,5 +20,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/erase_button"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_margin="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="@string/erase_all"
+        android:background="@drawable/btn_settings"/>
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
