--- a/app/src/main/res/layout/activity_add_edit_config.xml
+++ b/app/src/main/res/layout/activity_add_edit_config.xml
@@ -6,21 +6,21 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:ignore="HardcodedText"
-    tools:context=".AddEditNoteActivity">
+    tools:context=".AddEditConfigActivity">
 
     <!--edit text for note title-->
     <EditText
-        android:id="@+id/idEdtNoteName"
+        android:id="@+id/idEdtConfigName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:hint="Enter Note Title"
+        android:hint="Enter Config Title"
         android:textColor="@color/black"
         android:textColorHint="@color/black"/>
 
     <!--edit text for note description-->
     <EditText
-        android:id="@+id/idEdtNoteDesc"
+        android:id="@+id/idEdtConfigDesc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -28,7 +28,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:gravity="start|top"
-        android:hint="Enter your Note Details"
+        android:hint="Enter your Config Details"
         android:inputType="textMultiLine"
         android:singleLine="false"
         android:textColor="@color/black"
