--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -30,7 +30,7 @@
 
     <!--fab for adding a new note-->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/idFAB"
+        android:id="@+id/idFAB2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="64dp"
